# philawatch

./: README.md  pyproject.toml
philawatch/: __init__.py  check_tickets.py  constants.py  custom_formatter.py  requests_utils.py  telegram.py
philawatch/models/: event.py
