[project]
name = "philawatch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]

[tool.uv]
package = true
dev-dependencies = [
    "basedpyright>=1.17.1",
    "ruff>=0.6.3",
]

[tool.pyright]
reportAny = false
